change name friendly-name to friendly-date

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div data-ng-app="friendlyDateApp" data-ng-controller="initController">
         <div data-ng-repeat="date in dateList">
-          <friendly-name data-date="{{date}}" data-title-class="friendly-date-title" data-content-class="friendly-date-content" data-prefix="friendly date is" data-full-format="d MMM yyyy,h:m a" data-short-format="h:m a"></friendly-name>
+          <friendly-date data-date="{{date}}" data-title-class="friendly-date-title" data-content-class="friendly-date-content" data-prefix="friendly date is" data-full-format="d MMM yyyy,h:m a" data-short-format="h:m a"></friendly-date>
         </div>
         </div>
     </body>
